# qz

./: -  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  benchmark_10m_results.txt  benchmark_30m_results.txt  benchmark_5m_results.txt  benchmark_results.txt  build.rs  pixi.toml  rustc-ice-2026-02-15T11_28_37-2855205.txt
benchmarks/: bench_qctx_blocksize.rs  benchmark_10m_2026-02-15.txt  results.txt  results_10m_all_ultra.txt  results_10m_optimized.txt  results_post_fix.txt  run_benchmarks.py
crates/qz-bench/: Cargo.toml
crates/qz-bench/src/: lib.rs
crates/qz-cli/: Cargo.toml
crates/qz-cli/src/: main.rs
crates/qz-lib/: Cargo.toml  build.rs
crates/qz-lib/src/: cli.rs  lib.rs
crates/qz-lib/src/compression/: arithmetic_quality.rs  bsc.rs  codecs.rs  columnar.rs  compress_impl.rs  debruijn.rs  decompress_impl.rs  delta.rs  factorize.rs  fqzcomp.rs  header_col.rs  mod.rs  n_mask.rs  openzl.rs  quality.rs  quality_context.rs  quality_ctx.rs  quality_delta.rs  quality_model.rs  template.rs  ultra.rs  zstd_dict.rs
crates/qz-lib/src/io/: fastq.rs
crates/qz-lib/tests/: integration_test.rs
crates/qz-python/: Cargo.toml  pyproject.toml
crates/qz-python/src/: lib.rs
scripts/: quality_context_analysis.py  quality_context_compress.py  quality_model_convergence.py  sequence_context_analysis.py  tensor_analysis.py
src/: lib.rs  main.rs  python.rs
src/cli/: mod.rs
src/compression/: arithmetic.rs  arithmetic_quality.rs  arithmetic_sequence.rs  benchmark.rs  bsc.rs  columnar.rs  debruijn.rs  delta.rs  dna_utils.rs  factorize.rs  fqzcomp.rs  greedy_contig.rs  harc.rs  header_col.rs  mod.rs  n_mask.rs  openzl.rs  paired_end.rs  quality.rs  quality_ctx.rs  quality_delta.rs  read_id.rs  reorder.rs  reorder_safe.rs  rle.rs  zstd_dict.rs
src/encoding/: dna.rs  mod.rs
src/io/: fastq.rs  formats.rs  mod.rs
tests/: integration_test.rs
