[package]
name = "qz"
version = "0.1.0"
edition = "2024"
authors = ["QZ Contributors"]
description = "High-performance FASTQ compression using columnar encoding and BSC/BWT"
license = "SEE LICENSE FILE"
readme = "README.md"

[lib]
name = "qz"
crate-type = ["cdylib", "rlib"]

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Parallelism (replaces OpenMP)
rayon = "1.10"

# Compression libraries
flate2 = "1.0"
zstd = "0.13"
constriction = "0.4"
openzl-sys = "0.1"

# Fast hashing for integer keys
rustc-hash = "2"

# Minimizer computation for sequence compression
minimizer-iter = "1.2"

# Syncmer-based k-mer selection for template indexing
syncmers = "0.1"


# FFI
libc = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile = "3.13"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
